test_programs/compile_failure/regression_10411/src/main.nr
mod foo {
    mod bar {}
}

fn main() {
    comptime {
        let m = quote { foo::bar }.as_module();
        let _ = m.unwrap();
    }
}
